--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,3 +1,40 @@
+.container {
+  padding-top: 60px;
+  padding-bottom: 10px;
+}
+
 .results-block {
   display: inline-block;
+}
+
+.no-padding {
+  padding: 0px !important;
+}
+
+.left-padding {
+  padding-left: 15px !important;
+}
+
+.logout {
+  padding-right: 30px;
+  padding-left: 20px;
+  text-align: center;
+}
+
+.user-name {
+  padding-top: 15px;
+}
+
+.nav.navbar-right li {
+  .btn {
+    color: #fff !important;
+    margin-top: 5%;
+  }
+  .btn-danger:hover {
+    background-color: darken(#d9534f, 10%) !important;
+  }
+}
+
+.fa-search {
+  padding-top: 5px;
 }
