--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,48 +37,33 @@
     <![endif]-->
   </head>
   <body>
-
-    <div class="navbar navbar-default navbar-static-top">
-      <div class="container">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="#">FinanceTracker</a>
-        <div class="navbar-collapse collapse navbar-responsive-collapse">
-          <ul class="nav navbar-nav">
-            <li><%= link_to "Link1", "/path1"  %></li>
-            <li><%= link_to "Link2", "/path2"  %></li>
-            <li><%= link_to "Link3", "/path3"  %></li>
-          </ul>
-        </div>
-      </div>
-    </div>
-
+    
+    <%= render 'layouts/navigation' %>
+    
     <div class="container">
       <div class="row">
         <div class="col-md-9">
           <%= bootstrap_flash %>
           <%= yield %>
         </div>
+<!--    
         <div class="col-md-3 fixed">
-          <div class="well sidebar-nav">
+          <div class="well sidebar-nav navbar-right">
             <h3>Sidebar</h3>
             <ul class="nav nav-list">
               <li class="nav-header">Sidebar</li>
-              <li><%= link_to "Link1", "/path1"  %></li>
-              <li><%= link_to "Link2", "/path2"  %></li>
-              <li><%= link_to "Link3", "/path3"  %></li>
+              <li><%#= link_to "Link1", "/path1"  %></li>
+              <li><%#= link_to "Link2", "/path2"  %></li>
+              <li><%#= link_to "Link3", "/path3"  %></li>
             </ul>
           </div><!--/.well -->
-        </div><!--/span-->
-      </div><!--/row-->
-
+<!--    </div><!--/span -->
+      </div><!--/row -->
+    
       <footer>
         <p>&copy; Company 2017</p>
       </footer>
-
+    
     </div> <!-- /container -->
 
   </body>
