Set signup as home page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,6 +38,7 @@
   </head>
   <body>
     
+    <%= render 'welcome/home' %>
     <%= render 'layouts/navigation' %>
     
     <div class="container">
