--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,5 @@
 <h1>Welcome to the finance tracker app</h1>
 
-<%= link_to "logout", destroy_user_session_path, method: :delete %>
+<%#= link_to t('.sign_up', default: 'Sign up'), new_registration_path(resource_name) %>
 
+<%= link_to "logout", destroy_user_session_path, method: :delete %>
